k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: devsecops
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
