k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webapp-namespace-isolation
  namespace: devsecops
spec:
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}    # allow from pods in same namespace
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
